--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,7 +3,9 @@
     <div class="footer_info">
       <div class="footer_author">
         <span class="footer_darkBytes">DarkBytes &copy;</span>
-        <span class="footer_darkBytes-author">LoydVP</span>
+        <span class="footer_darkBytes-author"
+          >MIT License Copyright &copy; 2025 LoydVP</span
+        >
       </div>
       <p class="quote_concept">
         «DarkBytes — новости с обратной стороны экрана. Где правда искажена,
