--- a/src/views/partials/posts.ejs
+++ b/src/views/partials/posts.ejs
@@ -1,7 +1,7 @@
 <section class="posts">
   <div class="container">
     <ul class="posts_list">
-      <%newsList.forEach(post => {%>
+      <%news.forEach(post => {%>
       <li class="posts_item">
         <div
           class="posts_preview-img"
