--- a/src/views/article.ejs
+++ b/src/views/article.ejs
@@ -10,6 +10,7 @@
     <title><%= title %></title>
   </head>
   <body>
+    <%- include('partials/header') %>
     <main class="main_content">
       <section class="content article">
         <div class="container">
@@ -49,5 +50,6 @@
         </div>
       </section>
     </main>
+    <%- include('partials/footer') %>
   </body>
 </html>
