--- a/public/css/articleStyle.css
+++ b/public/css/articleStyle.css
@@ -1,8 +1,12 @@
 /* Стили, специфичные для страницы отдельной статьи */
+.article {
+  margin: 0;
+}
 
 .article-data {
   display: flex;
   flex-direction: column;
+  margin-bottom: 30px;
   padding: 30px;
   background-color: var(--color-bg-light);
   border-radius: 15px;
