--- a/public/css/style.css
+++ b/public/css/style.css
@@ -476,14 +476,26 @@ section {
   max-width: 50%;
 }
 
+/* components */
+
 .home_back-button {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100px;
-  height: 50px;
+  height: 30px;
   border-radius: 5px;
   border: none;
   color: var(--color-text-light);
   background-color: var(--color-text-dark);
+}
+
+.go-to-home-and-back {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+  padding: 0 30px 0 30px;
+  background-color: var(--color-bg-light);
+  border-radius: 15px;
 }
