--- a/public/css/style.css
+++ b/public/css/style.css
@@ -499,3 +499,31 @@ section {
   background-color: var(--color-bg-light);
   border-radius: 15px;
 }
+
+.posts_info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+
+.posts_author {
+  display: flex;
+}
+
+.author_data {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 15px;
+}
+
+.author_data > span {
+  color: var(--color-text-dark);
+}
+
+.author_avatar {
+  width: 50px;
+  height: 50px;
+  background-size: cover;
+}
