--- a/src/views/partials/components/buttonBack.ejs
+++ b/src/views/partials/components/buttonBack.ejs
@@ -1,3 +1,3 @@
 <a href="javascript:history.back()"
-  ><div class="home_back-button">&larr; Назад</div></a
+  ><div class="home_back-button">&larr; назад</div></a
 >
