--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -16,6 +16,14 @@
         <a href="#" class="footer_logo"></a>
         <a href="mailto:" class="fooret_mail">darkBytes@mail.com</a>
       </div>
+      <p class="lecense_content">
+        Все тексты на этом сайте являются авторскими. &copy; LoydVP, 2025.
+        Использование материалов разрешено только с указанием авторства и
+        ссылкой на сайт. Лицензия:
+        <a href="https://creativecommons.org/licenses/by-nc-nd/4.0/"
+          >CC BY-NC-ND 4.0</a
+        >.
+      </p>
     </div>
   </div>
 </footer>
