--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -12,6 +12,11 @@
   <body>
     <%- include('partials/header') %>
     <main class="main_content">
+      <section class="content_card-preview-mobile content">
+        <div class="container">
+          <%- include('partials/posts', {news: previewsNews}) %>
+        </div>
+      </section>
       <section class="content_card-preview content">
         <div class="container">
           <div class="card_preview">
@@ -94,7 +99,11 @@
         </div>
       </section>
       <section class="section_banner">
-        <div class="banner"><p class="news_quote"><%=quote[0].quote%></p></div>
+        <div class="container">
+          <div class="banner">
+            <p class="news_quote"><%=quote[0].quote%></p>
+          </div>
+        </div>
       </section>
       <section class="posts">
         <div class="container">
